# BORIS

./: .gitignore  BORIS-logo.icns  BORIS.py  BORIS.spec  Info.plist  MANIFEST.in  Makefile  README.TXT  README.md  README.rst  README_pip.rst  add_modifier.py  add_modifier.ui  add_modifier_ui.py  add_modifier_ui5.py  behav_coding_map_creator.py  behaviors_coding_map.py  behaviors_map.py  boris.py  boris.qrc  boris.ui  boris2.py  boris_cli.py  boris_logo_v7.icns  boris_ui.py  boris_ui5.py  boris_win.spec  changelog.md  coding_map.py  coding_pad.py  config.py  converters.py  converters.ui  converters_ui.py  converters_ui5.py  db_functions.py  dev-requirements.txt  diagram_widget.py  dialog.py  edit_event.py  (+63 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: md5-on-release.yml
boris/: README.TXT  __init__.py  __init__.py~  __main__.py  __main__.py~  about.py  add_modifier.py  add_modifier.ui  add_modifier_ui.py  advanced_event_filtering.py  behav_coding_map_creator.py  behavior_binary_table.py  behavior_shortcut.py  behavior_shortcut_qevent.py  behaviors_coding_map.py  boris.py  boris.qrc  boris.qrc~  boris.ui  boris_cli.py  boris_ui.py  cmd_arguments.py  coding_pad.py  config.py  config_file.py  connections.py  converters.py  converters_ui.py  cooccurence.py  core.py  core.qrc  core.ui  core_qrc.py  core_ui.py  db_functions.py  dev.py  dialog.py  duration_widget.py  edit_event.py  edit_event.ui  (+75 more)
boris/analysis_plugins/: _export_to_feral.py  _latency.py  export_to_feral.py  export_to_praat_textgrid.py  irr_cohen_kappa.py  irr_cohen_kappa_with_modifiers-0.0.3.py  irr_cohen_kappa_with_modifiers.py  irr_cohen_kappa_with_modifiers_new.py  irr_weighted_cohen_kappa-0.0.4.py  irr_weighted_cohen_kappa.py  irr_weighted_cohen_kappa_new.py  irr_weighted_cohen_kappa_with_modifiers-0.0.3.py  irr_weighted_cohen_kappa_with_modifiers.py  list_of_dataframe_columns.py  number_of_occurences.py  number_of_occurences_by_independent_variable.py  time_budget.py
boris/portion/: __init__.py  dict.py  func.py  interval.py  io.py
boris/qdarkstyle/: __init__.py
boris_behav_obs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deployment/: windows_deployment.ps1  windows_deployment_test.ps1
docs/: archives.html  authors.html  categories.html  index.html  my-first-review.html  tags.html
docs/author/: olivier-friard.html
docs/category/: review.html
docs/pages/: about.html  citing_literature.html  documentation.html  download.html  download_android.html  download_linux.html  download_mac.html  download_win_template.html  features.html  home.html  my-super-post.html  postcards.html  screenshots.html  test-post.html  video_tutorials.html
docs/theme/: gumby.css
ezodf/: __init__.py  base.py  body.py  bytestreammanager.py  cells.py  cellspancontroller.py  compatibility.py  conf.py  const.py  content.py  document.py  drawingpage.py  filemanager.py  manifest.py  meta.py  nodeorganizer.py  nodestructurechecker.py  nodestructuretags.py  observer.py  pagecontainer.py  pages.py  presentationpage.py  propertymixins.py  protection.py  sheets.py  styles.py  table.py  tablecolumncontroller.py  tablenormalizer.py  tablerowcontroller.py  tableutils.py  text.py  timeparser.py  variables.py  whitespaces.py  wrapcache.py  xmlns.py
manual/: index.asciidoc
python311_venv/: pyvenv.cfg
scripts/: start_macOS.command
scripts/deployment/: windows_deployment_test.ps1
src/: COPYING.TXT  Info.plist  README.TXT  add_modifier.py  add_modifier.ui  add_modifier_ui.py  add_modifier_ui5.py  advanced_event_filtering.py  behav_coding_map_creator.py  behavior_binary_table.py  behaviors_coding_map.py  boris.py  boris.qrc  boris.ui  boris_cli.py  boris_ui.py  boris_ui5.py  coding_pad.py  config.py  converters.py  converters_ui.py  db_functions.py  dialog.py  duration_widget.py  duration_widget2.py  edit_event.py  edit_event_ui.py  export_observation.py  instantaneous_sampling.py  irr.py  map_creator.py  measurement_widget.py  modifiers_coding_map.py  observation.py  observation.ui  observation_ui.py  observation_ui5.py  observations_list.py  otx_parser.py  param_panel.py  (+29 more)
tablib/formats/: __init__.py
tests/: Makefile  otx_parser_test.otx  test_db_functions.py  test_export_observation.py  test_instantaneous_sampling.py  test_irr.py  test_mpv_observation_lifecycle.py  test_observation_gui.py  test_otx_parser.py  test_plot_events.py  test_plot_spectrogram_rt.py  test_plugins.py  test_preferences_gui.py  test_project_functions.py  test_sample_project.py  test_time_budget.py  test_utilities.py  test_utilities2.py
tests/files/: Test_events_to_behavioral_sequences_test_1  Test_events_to_behavioral_sequences_test_2_separator  Test_events_to_behavioral_sequences_test_4_behaviors_with_modifiers  Test_events_to_behavioral_sequences_test_5_observation_not_paired  Test_events_to_behavioral_sequences_test_6_multi_rows_description.txt  Test_events_to_behavioral_sequences_test_7.txt  export_observations_list_test1.tsv  otx_import_test.boris  otx_parser_test.otb  test.boris  test.txt  test2.boris  test_check_txt_file_test_csv.csv  test_check_txt_file_test_tsv.tsv  test_db_functions_test1  test_export_aggregated_events_test_full_1.tsv  test_export_aggregated_events_test_full_2.tsv  test_export_aggregated_events_test_full_3.tsv  test_export_aggregated_events_test_full_4.tsv  test_export_aggregated_events_test_full_5.tsv  (+11 more)
(+68 files in other folders)
