[project]
name = "boris-behav-obs"
version = "9.3.3"
description = "BORIS - Behavioral Observation Research Interactive Software"
authors = [{ name="Olivier Friard", email="olivier.friard@unito.it" }]
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
classifiers=[
        "Topic :: Scientific/Engineering",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "Programming Language :: Python :: 3.12",        
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering",
    ]
dependencies = [
    "exifread>=3.0.0",
    "numpy>=1.26.4",
    "matplotlib>=3.3.3",
    "pandas>=2.2.2",
    "tablib[html, ods, xls, xlsx, pandas, cli]>=3",
    "pyreadr",
    "pyside6==6.8.0.2",
    "hachoir>=3.3.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]

[project.urls]
Homepage = "http://www.boris.unito.it"
Documentation = "https://boris.readthedocs.io/en/latest/"
Change_log = "https://github.com/olivierfriard/BORIS/wiki/BORIS-change-log-v.8"
Source_code = "https://github.com/olivierfriard/BORIS"
Issues = "https://github.com/olivierfriard/BORIS/issues"

[project.scripts]
boris-behav-obs = "boris.core:main"


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true


[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
line-length = 140
exclude = ["*_ui.py", "mpv*"]

[tool.bumpver]
current_version = "9.3.3"
version_pattern = "MAJOR.MINOR.PATCH"


[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

